# desafio_indicium

./: pyproject.toml  readme.txt
data/: contacts.tsv
src/: etl.py
