[tool.poetry]
name = "desafio_indicium"
version = "0.1.0"
description = "Script desenvolvido como parte do processo seletivo na Indicium"
authors = ["Lucas Zacchi <zacchilucasm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
